...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K3k-eF-Wba">
                                        <rect key="frame" x="20" y="61" width="520" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Search Options" id="8Jk-W6-hCw">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="3ce-ey-xGL">
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Do Search" id="OQv-sf-2j8">
                            <connections>
                                <action selector="searchButtonAction:" destination="NZg-Ki-Hja" id="wOz-1C-Ivl"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Search Results" id="d7o-sg-F4x">
                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="r4b-Uu-lnU">
                            <connections>
...
                                        <rect key="frame" x="0.0" y="220" width="560" height="298"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="reviewTextArea"/>
                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nul
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <rect key="frame" x="180" y="7" width="240" height="30"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <state key="normal" title="Done"/>
                            <connections>
                                <action selector="reviewDoneAction:" destination="MFO-Dz-O3h" eventType="touchUpInside" id="E37-wV-8cD"/>
...
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nothing is stored!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVc-H7-rTD">
                                            <rect key="frame" x="135" y="0.0" width="449" height="21"/>
                                            <color key="backgroundColor" red="0.91163589015151514" green="0.91163589015151514" blue="0.91163589015151514" alpha="1" colorSpace="calibratedRGB"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My IMDb" id="AZJ-6f-3ub">
                        <barButtonItem key="rightBarButtonItem" title="Search IMDb" id="Osm-Rz-dFj">
                            <connections>
                                <segue destination="9WX-nk-wd7" kind="presentation" identifier="loadSearchTableView" id="449-V4-oXE"/>
...
