...
import UIKit
import CoreData

extension UIViewController {
    internal func doInputAlert(title: String, message: String) {
        let alert = UIAlertController(title: title, message: message, preferredStyle: UIAlertControllerStyle.Alert)
        let defaultAction = UIAlertAction(title: "OK", style: .Default, handler: nil)
        alert.addAction(defaultAction)
        
        presentViewController(alert, animated: true, completion: nil)
    }
    
    internal func setGestureRecognizerForView(selector: Selector, sender: UIViewController) {
...
