...
                    self.doInputAlert(NSLocalizedString("ExternalErrorOMDB", comment: "Title on OMDB error alert"),
                        message: NSLocalizedString("ExternalErrorOMDBDescription", comment: "Notice on alert for external error in OMDB on imdbfetch"))
                    print("Could not get json from response")
                    return
                }
                
                guard let searchResult = json["Search"]! else {
                    SwiftSpinner.hide()
                    self.doInputAlert(NSLocalizedString("NoResults", comment: "Title on no hits alert"),
                        message: NSLocalizedString("NoResultsDescription", comment: "Notice on alert for no hits on imdbfetch"))
                    print("Could not fetch search results")
                    self.doInputAlert("No hits!", message: "Please enter different search criteria...")
                    return
...
